Fix window resize on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -580,6 +580,7 @@ strong {
 
   .coding-skills td {
     width: 6vw;
+    padding-bottom: 3vw;
   }
 
   .coding-icon {
@@ -823,6 +824,7 @@ strong {
 
   .coding-skills td {
     width: 6vw;
+    padding-bottom: 3vw;
   }
 
   .coding-icon {
